--- a/styles/global.css
+++ b/styles/global.css
@@ -26,15 +26,31 @@ body {
     background-color: var(--bg-color);
 }
 
-a{
+a {
     text-decoration: none;
     color: inherit;
 }
 
-a:hover{
+a:hover {
     color: var(--brand-color-light);
 }
 
-h1, h2, h3{
+h1,
+h2,
+h3 {
     font: inherit;
+}
+
+.container{
+    max-width: 1280px;
+    padding-inline: 32px;
+    margin-inline: auto;
+}
+
+.grid {
+    display: grid;
+}
+
+.grid-flow-col {
+    grid-auto-flow: column;
 }
