--- a/styles/global.css
+++ b/styles/global.css
@@ -41,16 +41,16 @@ h3 {
     font: inherit;
 }
 
-.container{
+img {
+    max-width: 100%;
+}
+
+.container {
     max-width: 1280px;
     padding-inline: 32px;
     margin-inline: auto;
 }
 
-.grid {
-    display: grid;
-}
-
-.grid-flow-col {
-    grid-auto-flow: column;
+main{
+    margin-top: 40px;
 }
