add gradient background

--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,7 +1,19 @@
-#featured{
-    img{
+#featured {
+    img {
         height: 100%;
         object-fit: cover;
+    }
+    
+    .card {
         border-radius: 4px;
+        overflow: hidden;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            inset: 0;
+            top: 50%;
+            background: linear-gradient(180deg, transparent 0%, #020617 100%);
+        }
     }
 }
