adjust card content

--- a/styles/global.css
+++ b/styles/global.css
@@ -54,3 +54,15 @@ img {
 main{
     margin-top: 40px;
 }
+
+.content-tag{
+    display: inline-block;
+    background-color: var(--brand-color-dark);
+    padding: 4px 8px;
+    border-radius: 8px;
+    font: 500 10px/1.2 var(--font-family);
+    text-transform: uppercase;
+    letter-spacing: 0.04em;
+    color: var(--text-color-primary);
+    box-shadow: 0px 4px 16px 0px rgba(2, 6, 23, 0.25);
+}
