--- a/styles/sections.css
+++ b/styles/sections.css
@@ -8,12 +8,23 @@
         border-radius: 4px;
         overflow: hidden;
         position: relative;
+
         &::before{
             content: '';
             position: absolute;
             inset: 0;
             top: 50%;
             background: linear-gradient(180deg, transparent 0%, #020617 100%);
+        }
+
+        figcaption{
+            position: absolute;
+            bottom: 0;
+            padding: 24px;
+
+            h2{
+                margin-top: 8px;
+            }
         }
     }
 }
