--- a/styles/utility.css
+++ b/styles/utility.css
@@ -13,3 +13,19 @@
 .gap-16{
     gap: 16px;
 }
+
+.text-2xl{
+    font: var(--h1)
+}
+
+.text-xl{
+    font: var(--h2)
+}
+
+.text-lg{
+    font: var(--h3)
+}
+
+.text-sm{
+    font: var(--text)
+}
