style the final cards

--- a/styles/global.css
+++ b/styles/global.css
@@ -51,12 +51,18 @@ img {
     margin-inline: auto;
 }
 
-main{
-    margin-top: 40px;
-    gap: 80px;
+main {
+    margin-block: 40px;
+    row-gap: 80px;
+    column-gap: 32px;
+    grid-template-areas:
+        'featured featured'
+        'weekly weekly'
+        'ai aside';
+    grid-template-columns: 2fr 1.4fr;
 }
 
-.content-tag{
+.content-tag {
     background-color: var(--brand-color-dark);
     padding: 4px 8px;
     border-radius: 4px;
