--- a/styles/sections.css
+++ b/styles/sections.css
@@ -21,6 +21,7 @@ section header {
 }
 
 #featured {
+    grid-area: featured;
     img {
         height: 100%;
         object-fit: cover;
@@ -56,6 +57,7 @@ section header {
 }
 
 #weekly {
+    grid-area: weekly;
     & > div {
         grid-template-columns: repeat(4, 292px);
     }
@@ -73,9 +75,39 @@ section header {
             left: 8px;
         }
 
-        p{
+        p {
             margin-top: 8px;
             font-weight: 800;
         }
+    }
+}
+
+#ai {
+    grid-area: ai;
+    img {
+        width: 176px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
+    }
+
+    h3 {
+        margin-block: 8px 4px;
+    }
+}
+
+aside {
+    grid-area: aside;
+}
+
+#more {
+    margin-top: 32px;
+    h3 {
+        margin-top: 8px;
+    }
+
+    img {
+        width: 72px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
     }
 }
