--- a/styles/header.css
+++ b/styles/header.css
@@ -7,7 +7,6 @@
         gap: 8px;
     }
 
-    /* nesting css */
     div:nth-child(2){
         margin-inline: auto;
     }
@@ -22,4 +21,17 @@
     border: solid 1px var(--stroke-color);
     border-inline: none;
     justify-content: space-between;
+}
+
+@media (width <= 60em) {
+    #secondary{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: center;
+
+        & > a{
+            white-space: nowrap;
+        }
+    }
 }
