--- a/styles/sections.css
+++ b/styles/sections.css
@@ -25,11 +25,11 @@ section header {
     img {
         height: 100%;
         object-fit: cover;
+        flex-shrink: 0;
     }
 
     .card {
         border-radius: 4px;
-        /* overflow: hidden; */
         position: relative;
 
         &::before {
@@ -59,11 +59,12 @@ section header {
 #weekly {
     grid-area: weekly;
     & > div {
-        grid-template-columns: repeat(4, 292px);
+        grid-template-columns: repeat(4, minmax(300px, 1fr));
     }
 
     img {
-        height: 160px;
+        height: 200px;
+        width: 100%;
     }
 
     figure {
@@ -109,5 +110,67 @@ aside {
         width: 72px;
         aspect-ratio: 1/1;
         object-fit: cover;
+    }
+}
+
+@media (width <= 80em) {
+    main {
+        grid-template-areas:
+            'featured featured'
+            'weekly weekly'
+            'ai ai'
+            'aside aside';
+    }
+
+    #featured {
+        grid-auto-flow: row;
+
+        & #first-card-img {
+            min-height: 300px;
+            width: 100%;
+        }
+
+        & > div {
+            grid-template-columns: repeat(2, minmax(250px, 1fr));
+
+            & figure > img {
+                min-height: 200px;
+                width: 100%;
+            }
+        }
+    }
+
+    #weekly > div {
+        grid-template-columns: repeat(2, minmax(200px, 1fr));
+    }
+
+    #ai > div > article {
+        grid-template-columns: 176px 1fr;
+
+        & > div:nth-child(1) {
+            grid-column: 2;
+        }
+
+        & > div:nth-child(2) {
+            grid-column: 1;
+        }
+    }
+
+    div#ads {
+        text-align: center;
+    }
+
+    #more article {
+        grid-template-columns: 72px 1fr;
+    }
+}
+
+@media (width <= 40em) {
+    #featured > div {
+        grid-template-columns: repeat(1, minmax(250px, 1fr));
+    }
+
+    #weekly > div {
+        grid-template-columns: repeat(1, minmax(200px, 1fr));
     }
 }
