--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,17 +1,17 @@
 section header {
     border-top: 1px solid var(--stroke-color);
-    padding-block: 12px 24px;
+    padding-block: 0.75rem 1.5rem;
     font: var(--text-span);
 
     a {
         justify-self: end;
         align-items: center;
-        gap: 8px;
+        gap: 0.5rem;
 
         span {
             background-image: url(../assets/icons/ArrowRight.svg);
-            width: 16px;
-            height: 16px;
+            width: 1rem;
+            height: 1rem;
         }
 
         &:hover span {
@@ -29,7 +29,7 @@ section header {
     }
 
     .card {
-        border-radius: 4px;
+        border-radius: 0.25rem;
         position: relative;
 
         &::before {
@@ -43,14 +43,14 @@ section header {
         figcaption {
             position: absolute;
             bottom: 0;
-            padding: 24px;
+            padding: 1.5rem;
 
             &:has(.text-lg) {
-                padding: 12px;
+                padding: 0.75rem;
             }
 
             h2 {
-                margin-top: 8px;
+                margin-top: 0.5rem;
             }
         }
     }
@@ -59,11 +59,11 @@ section header {
 #weekly {
     grid-area: weekly;
     & > div {
-        grid-template-columns: repeat(4, minmax(300px, 1fr));
+        grid-template-columns: repeat(4, minmax(18.75rem, 1fr));
     }
 
     img {
-        height: 200px;
+        height: 12.5rem;
         width: 100%;
     }
 
@@ -72,12 +72,12 @@ section header {
 
         .content-tag {
             position: absolute;
-            top: 8px;
-            left: 8px;
+            top: 0.5rem;
+            left: 0.5rem;
         }
 
         p {
-            margin-top: 8px;
+            margin-top: 0.5rem;
             font-weight: 800;
         }
     }
@@ -86,13 +86,13 @@ section header {
 #ai {
     grid-area: ai;
     img {
-        width: 176px;
+        width: 11rem;
         aspect-ratio: 1/1;
         object-fit: cover;
     }
 
     h3 {
-        margin-block: 8px 4px;
+        margin-block: 0.5rem 0.25rem;
     }
 }
 
@@ -101,13 +101,13 @@ aside {
 }
 
 #more {
-    margin-top: 32px;
+    margin-top: 2rem;
     h3 {
-        margin-top: 8px;
+        margin-top: 0.5rem;
     }
 
     img {
-        width: 72px;
+        width: 4.5rem;
         aspect-ratio: 1/1;
         object-fit: cover;
     }
@@ -126,26 +126,26 @@ aside {
         grid-auto-flow: row;
 
         & #first-card-img {
-            min-height: 300px;
+            min-height: 18.75rem;
             width: 100%;
         }
 
         & > div {
-            grid-template-columns: repeat(2, minmax(250px, 1fr));
+            grid-template-columns: repeat(2, minmax(15.625rem, 1fr));
 
             & figure > img {
-                min-height: 200px;
+                min-height: 12.5rem;
                 width: 100%;
             }
         }
     }
 
     #weekly > div {
-        grid-template-columns: repeat(2, minmax(200px, 1fr));
+        grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
     }
 
     #ai > div > article {
-        grid-template-columns: 176px 1fr;
+        grid-template-columns: 11rem 1fr;
 
         & > div:nth-child(1) {
             grid-column: 2;
@@ -161,16 +161,16 @@ aside {
     }
 
     #more article {
-        grid-template-columns: 72px 1fr;
+        grid-template-columns: 4.5rem 1fr;
     }
 }
 
 @media (width <= 40em) {
     #featured > div {
-        grid-template-columns: repeat(1, minmax(250px, 1fr));
+        grid-template-columns: repeat(1, minmax(15.625rem, 1fr));
     }
 
     #weekly > div {
-        grid-template-columns: repeat(1, minmax(200px, 1fr));
+        grid-template-columns: repeat(1, minmax(12.5rem, 1fr));
     }
 }
