--- a/styles/header.css
+++ b/styles/header.css
@@ -1,36 +1,36 @@
-#primary{
-    padding-block: 20px;
+#primary {
+    padding-block: 1.25rem;
 
-    div{
+    div {
         display: flex;
         align-items: center;
-        gap: 8px;
+        gap: 0.5rem;
     }
 
-    div:nth-child(2){
+    div:nth-child(2) {
         margin-inline: auto;
     }
 
-    div:nth-child(3){
+    div:nth-child(3) {
         justify-self: end;
     }
 }
 
-#secondary{
-    padding-block: 14px;
+#secondary {
+    padding-block: 0.875rem;
     border: solid 1px var(--stroke-color);
     border-inline: none;
     justify-content: space-between;
 }
 
 @media (width <= 60em) {
-    #secondary{
+    #secondary {
         display: flex;
         flex-wrap: wrap;
-        gap: 10px;
+        gap: 0.625rem;
         justify-content: center;
 
-        & > a{
+        & > a {
             white-space: nowrap;
         }
     }
